# apps.core.preloaded.ug-nfc-efl

./: CMakeLists.txt  patchfile  project.config  ug-nfc-efl.xml
common/: ug-nfc-efl.xml
mobile/: CMakeLists.txt
mobile/include/: ug-nfc-setting-main.h
mobile/po/: ro.po  uz.po
mobile/src/: ug-nfc-setting-main.c
packaging/: ug-nfc-efl.changes  ug-nfc-efl.spec
po/: CMakeLists.txt
src/: ug-nfc-setting-main.c
ug-nfc-setting-efl/: CMakeLists.txt
ug-nfc-setting-efl/include/: ug-nfc-setting-main.h
ug-nfc-setting-efl/src/: ug-nfc-setting-db.c  ug-nfc-setting-main.c  ug-nfc-setting-popup.c
wearable/: CMakeLists.txt  org.tizen.nfc-setting-app.xml
wearable/app/: CMakeLists.txt
wearable/app/data/: CMakeLists.txt
wearable/app/data/edc/: nfc-setting-app.edc
wearable/app/include/: nsa-debug.h  nsa-main.h  nsa-popup.h  nsa-string.h  nsa-ui-widget.h  nsa-util.h  nsa-view.h
wearable/app/src/: nsa-main.c  nsa-popup.c  nsa-ui-widget.c  nsa-view-main.c  nsa-view-tap-n-pay.c
wearable/po/: CMakeLists.txt  ar.po  as.po  az.po  be_BY.po  bg.po  bn.po  bn_BD.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_PH.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  ky_KG.po  lo.po  (+40 more)
