CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

MESSAGE("build nfc setting menu")

IF(TIZEN_MOBILE)
MESSAGE("profile : mobile")
ADD_SUBDIRECTORY(mobile)
ENDIF(TIZEN_MOBILE)

IF(TIZEN_WEARABLE)
MESSAGE("profile : wearable")
ADD_SUBDIRECTORY(wearable)
ENDIF(TIZEN_WEARABLE)

IF(TIZEN_COMMON)
MESSAGE("profile : common")
ADD_SUBDIRECTORY(common)
ENDIF(TIZEN_COMMON)
