SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(BINDIR "${PREFIX}/bin")
SET(RESDIR "${PREFIX}/res")
SET(LOCALEDIR "${RESDIR}/locale")
SET(IMGDIR "${RESDIR}/images")
SET(EDJDIR "${RESDIR}/edje")
SET(ICONDIR "${CMAKE_SHARE_PREFIX}/icons/default/small")
SET(XMLDIR "${CMAKE_SHARE_PREFIX}/packages")
SET(DATADIR "${CMAKE_DATA_PREFIX}")
SET(TABLEDIR "${PREFIX}/shared/res/tables")

ADD_DEFINITIONS("-DPACKAGE=\"nfc-setting-app\"")
ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")
ADD_DEFINITIONS("-DRESDIR=\"${RESDIR}\"")
ADD_DEFINITIONS("-DLOCALEDIR=\"${LOCALEDIR}\"")
ADD_DEFINITIONS("-DIMGDIR=\"${IMGDIR}\"")
ADD_DEFINITIONS("-DEDJDIR=\"${EDJDIR}\"")
ADD_DEFINITIONS("-DICONDIR=\"${ICONDIR}\"")
ADD_DEFINITIONS("-DDATADIR=\"${DATADIR}\"")
ADD_DEFINITIONS("-DTABLEDIR=\"${TABLEDIR}\"")

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
        SET(CMAKE_BUILD_TYPE "Debug")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

#------- for development --------
ADD_DEFINITIONS("-DNSA_LOG_LEVEL_2")
#--------------------------------

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror-implicit-function-declaration")
SET(CMAKE_C_FLAGS_DEBUG "-O2 -g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/org.tizen.nfc-setting-app.xml DESTINATION /usr/share/packages/)

# source file
ADD_SUBDIRECTORY(app)
ADD_SUBDIRECTORY(po)

# End of a file
