ADD_CUSTOM_TARGET(${PROJECT_NAME}.edj
		COMMAND edje_cc -id ${CMAKE_CURRENT_SOURCE_DIR}/images
		${CMAKE_CURRENT_SOURCE_DIR}/edc/${PROJECT_NAME}.edc ${PROJECT_NAME}.edj
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/edc/${PROJECT_NAME}.edc
)
ADD_DEPENDENCIES(${PROJECT_NAME} ${PROJECT_NAME}.edj)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.edj DESTINATION ${EDJDIR})

# End of a file
